Global styles: fix `text-align` of `.row.equal > :first-child`

--- a/src/global.css
+++ b/src/global.css
@@ -216,7 +216,7 @@ pre {
 		}
 	}
 
-	> :first-child {
+	&:not(.equal) > :first-child {
 		text-align: start;
 	}
 
